--- a/dio_santander_dev_week_2023.ipynb
+++ b/dio_santander_dev_week_2023.ipynb
@@ -33,7 +33,15 @@
         "A Flora cresceu rapidamente e atualmente possui mais de 15 funcionários, um estoque de mais de 20 tipos de flores e uma frota de 4 veículos para entrega. A Flora faturou cerca de R$460.000,00 no ano de 2022.\n",
         "A Flora se diferencia da concorrência por oferecer um serviço personalizado, onde os clientes podem escolher as flores, as cores, o estilo e a mensagem do arranjo. A Flora também oferece uma garantia de satisfação, onde os clientes podem solicitar a troca ou o reembolso do produto caso não fiquem satisfeitos.\n",
         "A Flora utiliza as redes sociais, o e-mail marketing e o boca a boca para divulgar seus produtos e atrair novos clientes. A Flora também participa de eventos e feiras relacionados ao segmento de flores e decoração.\n",
-        "A Flora tem como principais desafios manter a qualidade e a variedade das flores, lidar com a sazonalidade e a demanda, gerenciar a logística e a entrega, fidelizar os clientes e expandir o mercado."
+        "A Flora tem como principais desafios manter a qualidade e a variedade das flores, lidar com a sazonalidade e a demanda, gerenciar a logística e a entrega, fidelizar os clientes e expandir o mercado.\n",
+        "\n",
+        "Após uma análise sobre os próximos passos da empresa, seus proprietários concluiram que devem atuar como atacadistas e precisma desenvolver toda a estrutura para isso.\n",
+        "\n",
+        "Desenvovlimento do Banco de Dados:\n",
+        "O Banco de dados foi desenvolvido no Workbench e contou com quatro planilhas. A planilha de cadastro de clientes, fornecedores, produtos e pedidos. Os aquivos em CSV estaram no mesmo repositório do Github.\n",
+        "\n",
+        "Proposta:\n",
+        "Foi solicitado o desenvolvimento de um sistema que utilize uma IA gerativa que crie mensagens personalizadas através do banco de dados da Flora. As mensagens devem estimular clientes a comprar flores para revender e também oferecer dicas de marketing."
       ],
       "metadata": {
         "id": "lNdFCEYihbW_"
@@ -41,18 +49,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#sdw2023_api_url = 'https://sdw-2023-prd.up.railway.app'"
-      ],
-      "metadata": {
-        "id": "pBwjxOtdlYgu"
-      },
-      "execution_count": 75,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 1,
       "metadata": {
         "id": "EZ--5bWjg_Z6"
       },
@@ -64,7 +61,7 @@
     {
       "cell_type": "code",
       "source": [
-        "clientes = pd.read_csv(\"/content/drive/MyDrive/Estudos_Dados_flora/cadastro_cliente_estudo - clientes.csv\")\n",
+        "clientes = pd.read_csv(\"/content/drive/MyDrive/Estudos_Dados_flora/flora_clientes.csv\")\n",
         "clientes.head()\n"
       ],
       "metadata": {
@@ -87,7 +84,7 @@
     {
       "cell_type": "code",
       "source": [
-        "fornecedores = pd.read_csv(\"/content/drive/MyDrive/Estudos_Dados_flora/cadastro_cliente_estudo - fornecedores.csv\")\n",
+        "fornecedores = pd.read_csv(\"/content/drive/MyDrive/Estudos_Dados_flora/flora_fornecedores.csv\")\n",
         "fornecedores.head()"
       ],
       "metadata": {
@@ -99,7 +96,7 @@
     {
       "cell_type": "code",
       "source": [
-        "pedido = pd.read_csv(\"/content/drive/MyDrive/Estudos_Dados_flora/flora_pedidos - cadastro_cliente_estudo - pedido.csv\")\n",
+        "pedido = pd.read_csv(\"/content/drive/MyDrive/Estudos_Dados_flora/flora_pedidos - cadastro_cliente_estudo - pedido-3.csv\")\n",
         "pedido.head()"
       ],
       "metadata": {
@@ -111,7 +108,7 @@
     {
       "cell_type": "code",
       "source": [
-        "produtos = pd.read_csv(\"/content/drive/MyDrive/Estudos_Dados_flora/cadastro_cliente_estudo - produtos.csv\")\n",
+        "produtos = pd.read_csv(\"/content/drive/MyDrive/Estudos_Dados_flora/flora_produtos.csv\")\n",
         "produtos.head()"
       ],
       "metadata": {
@@ -169,18 +166,18 @@
       "metadata": {
         "id": "Jfgswr_irRK6"
       },
-      "execution_count": 85,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "openai_api_key = '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'"
+        "openai_api_key = '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'"
       ],
       "metadata": {
         "id": "PEnroyZyl61p"
       },
-      "execution_count": 86,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -195,7 +192,7 @@
       "metadata": {
         "id": "30eKTN-EmAbS"
       },
-      "execution_count": 87,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -211,7 +208,7 @@
         "      },\n",
         "      {\n",
         "          \"role\": \"user\",\n",
-        "          \"content\": f\"Crie uma mensagem para {nome_cliente} Crie mensagens baseadas no nome dos clientes do banco de dados estimulando-os a comprar (máximo de 100 caracteres)\"\n",
+        "          \"content\": f\"Crie uma mensagem para {nome_cliente} baseada no nome dos clientes do banco de dados estimulando-os a comprar online e oferecendo dicas de marketing. (máximo de 200 caracteres)\"\n",
         "      }\n",
         "    ]\n",
         "  )\n",
@@ -220,7 +217,7 @@
       "metadata": {
         "id": "s9Ti01rIMiEF"
       },
-      "execution_count": 88,
+      "execution_count": 21,
       "outputs": []
     },
     {
