--- a/dio_santander_dev_week_2023.ipynb
+++ b/dio_santander_dev_week_2023.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Introdução: Para o desafio foi solicitado o desenvolvimento da IA generativa em um diferente contexto. Para isso, utilizei diferentes recursos como a inteligência artificial Bing para a criação do contexto, o Mysql para o desenvolvimento do banco de dados, Colahb para o desenvolvimento em python além do Google Docs para armazenamento do banco em CSV. O desenvolvimento ocorreu comforme descrito abaixo.\n",
+        "Introdução: Para o desafio foi solicitado o desenvolvimento da IA generativa em um diferente contexto. Para isso, utilizei diferentes recursos como a inteligência artificial Bing para a criação do contexto, o Mysql para o desenvolvimento do banco de dados, Colab para o desenvolvimento em python além do Google Docs para armazenamento do banco em CSV. O desenvolvimento ocorreu comforme descrito abaixo.\n",
         "\n",
         "Contexto:\n",
         "Criação da empresa\n",
@@ -37,8 +37,8 @@
         "\n",
         "Após uma análise sobre os próximos passos da empresa, seus proprietários concluiram que devem atuar como atacadistas e precisma desenvolver toda a estrutura para isso.\n",
         "\n",
-        "Desenvovlimento do Banco de Dados:\n",
-        "O Banco de dados foi desenvolvido no Workbench e contou com quatro planilhas. A planilha de cadastro de clientes, fornecedores, produtos e pedidos. Os aquivos em CSV estaram no mesmo repositório do Github.\n",
+        "Desenvovimento do Banco de Dados:\n",
+        "O Banco de dados foi desenvolvido no Workbench e contou com quatro planilhas. A planilha de cadastro de clientes, fornecedores, produtos e pedidos. Os aquivos em CSV estarão no mesmo repositório do Github.\n",
         "\n",
         "Proposta:\n",
         "Foi solicitado o desenvolvimento de um sistema que utilize uma IA gerativa que crie mensagens personalizadas através do banco de dados da Flora. As mensagens devem estimular clientes a comprar flores para revender e também oferecer dicas de marketing."
