--- a/dio_santander_dev_week_2023.ipynb
+++ b/dio_santander_dev_week_2023.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Introdução: Para o desafio foi solicitado o desenvolvimento da IA generativa em um diferente contexto. Para isso, utilizei diferentes recursos como a inteligência artificial Bing para a criação do contexto, o Mysql para o desenvolvimento do banco de dados, Colab para o desenvolvimento em python além do Google Docs para armazenamento do banco em CSV. O desenvolvimento ocorreu comforme descrito abaixo.\n",
+        "Introdução: Para o desafio foi solicitado o desenvolvimento da IA generativa em um diferente contexto. Para isso, utilizei diferentes recursos como a inteligência artificial Bing para a criação do contexto, o Mysql para o desenvolvimento do banco de dados, Colab para o desenvolvimento em python além do Google Docs para armazenamento do banco em CSV. O desenvolvimento ocorreu conforme descrito abaixo.\n",
         "\n",
         "Contexto:\n",
         "Criação da empresa\n",
